--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <meta name="description" content="Free Web tutorials">
+    <meta name="keywords" content="HTML, CSS, JavaScript, developer, geek, community, coding, php, laravel">
     <link rel="apple-touch-icon" type="image/png" href="img/pic.jpg" />
     <meta name="apple-mobile-web-app-title" content="GeekHub">
 
@@ -40,7 +41,7 @@
                             <p><span class="server">Geek Hub Server</span><span class="by">by</span><span
                                     class="name">GeekHub</span></p>
                         </div>
-                        <button class="acceptBtn">Accept Invite</button>
+                        <a class="acceptBtn" href="https://discord.gg/64w75F2Jf7"><span>Accept Invite</span> </a>
                     </form>
                 </div>
             </div>
