--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Free Web tutorials">
-    <meta name="keywords" content="HTML, CSS, JavaScript, developer, geek, community, coding, php, laravel">
+    <meta name="description" content="Geek Hub is a community of amazing developers We're a place where coders share, stay up-to-date, and grow their careers. problem solving, system design, scaling and devops things we discuss">
+    <meta name="keywords" content="HTML, CSS, JavaScript, developer, geek, community, coding, php, problem solving, system design, scaling, devops">
     <link rel="apple-touch-icon" type="image/png" href="img/pic.jpg" />
     <meta name="apple-mobile-web-app-title" content="GeekHub">
 
