--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Geek Hub is a community of amazing developers We're a place where coders share, stay up-to-date, and grow their careers. problem solving, system design, scaling and devops things we discuss">
+    <meta name="description" content="Geek Cord is a community of amazing developers We're a place where coders share, stay up-to-date, and grow their careers. problem solving, system design, scaling and devops things we discuss">
     <meta name="keywords" content="HTML, CSS, JavaScript, developer, geek, community, coding, php, problem solving, system design, scaling, devops">
     <link rel="apple-touch-icon" type="image/png" href="img/pic.jpg" />
-    <meta name="apple-mobile-web-app-title" content="GeekHub">
+    <meta name="apple-mobile-web-app-title" content="GeekCord">
 
     <link rel="shortcut icon" type="image/x-icon" href="img/pic.jpg" />
 
     <link rel="mask-icon" type="" href="img/pic.jpg" color="#111" />
 
 
-    <title>Geek Hub</title>
+    <title>Geek Cord</title>
 
 
     <link rel="stylesheet" href="styles.css">
@@ -38,8 +38,8 @@
                         <h1>YOU'VE BEEN INVITED TO JOIN</h1>
                         <div class="serverInfo">
                             <div class="img"><img src="img/discord_logo1600.png"></div>
-                            <p><span class="server">Geek Hub Server</span><span class="by">by</span><span
-                                    class="name">GeekHub</span></p>
+                            <p><span class="server">Geek Cord Server</span><span class="by">by</span><span
+                                    class="name">GeekCord</span></p>
                         </div>
                         <a class="acceptBtn" href="https://discord.gg/64w75F2Jf7"><span>Accept Invite</span> </a>
                     </form>
@@ -81,7 +81,7 @@
 
         <aside class="channels">
             <header class="channels-header focusable">
-                <h3 role="header" class="channels-header-name">Geek Hub 👨‍💻👨‍💻</h3>
+                <h3 role="header" class="channels-header-name">Geek Cord 👨‍💻👨‍💻</h3>
                 <svg role="button" aria-label="Dropdown" class="channels-header-dropdown">
                     <use xlink:href="#icon-dropdown" />
                 </svg>
@@ -124,7 +124,7 @@
                 <img class="avatar" alt="Avatar"
                     src="img/discordyellow.png" />
                 <div class="channels-footer-details">
-                    <span class="username">GeekHub</span>
+                    <span class="username">GeekCord</span>
                     <span class="tag">#0001</span>
                 </div>
                 <div class="channels-footer-controls button-group">
